--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/* courtesy of http://stackoverflow.com/questions/10363674/change-size-of-text-in-text-input-tag */
+input[type="text"] {
+    font-size:14px;
+}
 /* courtesy of https://codepen.io/brenden/pen/RNZXqx */
 .wrapper{
   margin:3em 0;
