--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Made by Kyle Rodgers*/
 /* courtesy of http://stackoverflow.com/questions/10363674/change-size-of-text-in-text-input-tag */
 input[type="text"] {
     font-size:14px;
